[package]
name = "rust-todo"
version = "0.1.0"
authors = ["ragnyll <ragnyll@gallowzhumour.dev>"]
edition = "2018"

[dependencies]
reqwest = { version = "^0.11.3", "features" = ["json"] }
tokio = { version = "1", "features" = ["full"] }
serde = { version = "^1.0.59" }
serde_json = { version = "^1.0.59" }
serde_derive = { version = "^1.0.59" }
exitcode = {version = "^1.1.2" }
dirs = { version = "^3.0.2" }
bytes = { version = "^1.0" }
