[package]
name = "rtodo"
version = "1.0.0"
authors = ["ragnyll <ragnyll@gallowzhumour.dev>"]
edition = "2018"

[dependencies]
reqwest = { version = "^0.11.3", "features" = ["json"] }
tokio = { version = "1", "features" = ["full"] }
serde = { version = "^1.0.59" }
serde_json = { version = "^1.0.59" }
serde_derive = { version = "^1.0.59" }
tui = { version = "^0.15" }
termion = { version = "^1.5" }
exitcode = {version = "^1.1.2" }
dirs = { version = "^3.0.2" }
bytes = { version = "^1.0" }
clap = { version = "3.0.0-beta.2" }
uuid = { version = "^0.8", features = ["v4", "serde"] }
